# auto_cribbage

./: README.md  pyproject.toml
src/auto_cribbage/: cards.py  game_state.py
tests/: card_test.py  game_test.py
