[project]
name = "auto_cribbage"
version = "0.1.0"
description = "Automatic cribbage"
authors = [
    {name = "Ethan Fahnestock, Jacob Fahnestock", email = "ekf@mit.edu"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
]
